Fix Sidebar scrollbars

--- a/app/layouts/root-layout/components/sidebar/sidebar.component.scss
+++ b/app/layouts/root-layout/components/sidebar/sidebar.component.scss
@@ -54,7 +54,7 @@ $display-thumbnails: false;
 
     width:  100%;
     height: 100%;
-    overflow: scroll;
+    overflow-y: auto;
 
     padding: 0;
     margin: 0;
